<resources>
    <string name="app_name">GuildWars2App</string>
    <string name="shared_pref_name">api_key_pref</string>
    <string name="shared_api_name">api_key</string>
    <string name="characters">Characters</string>
    <string name="equipment">Equipment</string>
    <string name="daily_achievements">Daily Achievements</string>
    <string name="events">Events</string>
    <string name="gemstones">Gemstones</string>
    <string name="wallet">Wallet</string>
    <string name="pvp_statistics">PvP Statistics</string>
    <string name="currency_top_label">Coins</string>
    <string name="currency_bottom_label">Gems</string>
</resources>